--- a/proyectos-1/.vscode/settings.json
+++ b/proyectos-1/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
-    "java.project.sourcePaths": ["src"],
+    "java.project.sourcePaths": [
+        "src",
+        "EjercicioExamen"
+    ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
-    ]
+        "Proyectos-1/lib/**/*.jar"
+    ],
+    "java.debug.settings.onBuildFailureProceed": true
 }
-e
